Fixing truncation of media player element

--- a/cloudmediaplayer.client/src/app/audio-player/audio-player.component.css
+++ b/cloudmediaplayer.client/src/app/audio-player/audio-player.component.css
@@ -5,6 +5,8 @@
   background-color: #f8f8f8;
   border-radius: 5px;
   border: 1px solid #eee;
+  overflow: hidden; 
+  box-sizing: border-box;
 }
 
 .now-playing {
@@ -34,13 +36,17 @@
   overflow: hidden;
   position: relative;
   width: 100%;
+  box-sizing: border-box;
+  min-width: 0; 
 }
 
 .media-element {
   width: 100%;
   display: block;
   background-color: #333;
-  padding: 10px;
+  padding: 5px; 
+  box-sizing: border-box;
+  min-width: 0; 
 }
 
 /* Responsive design */
@@ -53,5 +59,9 @@
   .player-controls {
     width: 100%;
     justify-content: center;
+  }
+
+  .media-element {
+    padding: 2px;
   }
 }
